--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: index
-title: Helium Jekyll
-tagline: Bootstrap 4 UI kit for Jekyll
+title: InterData Innovation Labs
+tagline: Education for the Masses
 css: 
 js: sliders.js
 keywords: helium, jekyll, bootstrap, UI, kit
