--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ canonical: https://heliumjk.github.io
                   <div class="carousel-item active">
                     <img src="{{ BASE_PATH }}/assets/images/slider/bg-1.jpg" alt="">
                     <div class="carousel-caption">
-                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span> - Education for the Masses</h3>
-                      <h5 class="slide-text animated fadeIn">Bootstrap 4 based theme ported for Jekyll and GitHub Pages.</h5>
+                      <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span></h3>
+                      <h5 class="slide-text animated fadeIn">Education for the Masses</h5>
                       <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Get Started</a>
                       <a href="https://github.com/heliumjk/heliumjk.github.io/" class="btn btn-lg btn-common animated fadeInUp">Learn More</a>
                     </div>
