--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@ title: InterData Innovation Labs
                 <div class="col-sm-6 col-md-3">
                     <!-- Team Item Starts -->
                     <figure>
-                        <img height="185" src="{{ BASE_PATH }}/assets/img/team-01.png" alt="">
+                        <img src="{{ BASE_PATH }}/assets/img/jason.png" alt="">
                         <div class="image-overlay">
                             <div class="overlay-text text-center">
                                 <div class="info-text">
-                                    <strong>Jason Kok</strong>
+                                    <strong>Jason</strong>
                                     <span>IT Specialist</span>
                                 </div>
                                 <hr class="small-divider border-white">
@@ -170,11 +170,11 @@ title: InterData Innovation Labs
                 <div class="col-sm-6 col-md-3">
                     <!-- Team Item Starts -->
                     <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/team-02.png" alt="">
+                        <img src="{{ BASE_PATH }}/assets/img/robin.png" alt="">
                         <div class="image-overlay">
                             <div class="overlay-text text-center">
                                 <div class="info-text">
-                                    <strong>Robin Kok</strong>
+                                    <strong>Robin</strong>
                                     <span>Flight Specialist</span>
                                 </div>
                                 <hr class="small-divider border-white">
