--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@ title: InterData Innovation Labs
                     </figure>
                     <!-- Team Item Ends -->
                 </div>
-
-<!-- Content area end -->
+            </div>
+        </div>
+    </div>
+    <!-- Content area end -->
 </div>
