--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: index
-title: InterData Innovation Labs
+title: I2Labs
 ---
 
 <div id="content">
@@ -17,12 +17,12 @@ title: InterData Innovation Labs
                                 <div class="carousel-caption">
                                     <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span></h3>
                                     <h5 class="slide-text animated fadeIn">
-                                        <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
-                                        Education for the Masses
                                         <img src="{{ BASE_PATH }}/assets/img/penguin.png" alt="">
+                                        I2Labs <i class="fa fa-heart cyan-color"></i> Education for the Masses
+                                        <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
                                     </h5>
-                                    <a href="#features" class="btn btn-lg btn-default-filled animated fadeInUp">Get Started</a>
-                                    <a href="" class="btn btn-lg btn-common animated fadeInUp">Learn More</a>
+                                    <a href="blog.html" class="btn btn-lg btn-default-filled animated fadeInUp">Blog</a>
+                                    <a href="#features" class="btn btn-lg btn-common animated fadeInUp">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -35,6 +35,23 @@ title: InterData Innovation Labs
 
     <div class="mb-60"></div>
 	  <div id="features" class="container">
+        <div class="sub-title">
+            <span>About Us</span>
+        </div>
+
+        <div class="service-content">
+        <p>
+            A brand new collaboration between two individuals with a shared passion for programming and machine learning, InterData Innovation Labs (I2Labs) starts out with a mission to make programming for young students accessible and relevant.
+        </p>
+        <p>
+            We believe that the fundamental skills required for programming starts from young. By making subjects learnt in school relevant to programming, concepts become self-reinforcing and less intimidating. We aim to break down notions that programming is a niche and difficult subject to learn. With extensive real-world experience in programming, we become not just instructors but also mentors for higher education and career advice.
+        </p>
+        <p>
+            Currently we want to reach out to schools to provide trial classes during the school holidays. These classes introduce simple programming concepts. Students learn how to code 2D games using Racket/Scheme, which is taught to first year students in many Universities and the language used in the famous SICP textbook by MIT. By recreating common games such as Snake and Tetris, classes aim to be engaging and fun especially since it is the holidays! You can find out more about our lesson plans in our <a href="blog.html">blog</a>.
+        </p>
+        </div>
+
+        <div class="mb-60"></div>
 	      <!-- SERVICES -->
         <div class="sub-title">
             <span>Features</span>
@@ -47,9 +64,11 @@ title: InterData Innovation Labs
                         <i class="fa fa-cogs"></i>
                     </div>
                     <div class="service-content">
-                        <h4><a href="#">Easy to Customize</a></h4>
+                        <h4>
+                            Future-proof learning
+                        </h4>
                         <p>
-                            Thanks to the basic knowledge of HTML CSS and JavaScript languages you can quickly change this theme according to your needs.
+                            A focus on programming principles rather than language, thus building the foundation for learning future languages and being adaptable.
                         </p>
                     </div>
                 </div>
@@ -63,9 +82,11 @@ title: InterData Innovation Labs
                         <i class="fa fa-cubes"></i>
                     </div>
                     <div class="service-content">
-                        <h4><a href="#">100+ Components</a></h4>
+                        <h4>
+                            Closely aligned with school math syllabus
+                        </h4>
                         <p>
-                            Thanks to the multitude of available blocks, you will be able to create professional layouts.
+                            Incorporating concepts learnt in school into programming exercises, reinforcing theoretical knowledge and exposure to real-world applications and best industry practices.
                         </p>
                     </div>
                 </div>
@@ -79,62 +100,16 @@ title: InterData Innovation Labs
                         <i class="fa fa-tachometer"></i>
                     </div>
                     <div class="service-content">
-                        <h4><a href="#">Super Fast</a></h4>
+                        <h4>
+                            Engaging projects that can be explored at home
+                        </h4>
                         <p>
-                            By using Jekyll as a preprocessor you will have a tremendous result in terms of loading speeds.
+                            Simple setup allows kids to continue exploring at home with minimal setup cost. Fun projects such as game design to keep students interested.
                         </p>
                     </div>
                 </div>
             </div>
             <!-- End Service Icon 3 -->
-
-            <!-- Start Service Icon 4 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fa fa-check"></i>
-                    </div>
-                    <div class="service-content">
-                        <h4><a href="#">Clean Design</a></h4>
-                        <p>
-                            Helium is designed to be clean and pleasant to navigate.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- End Service Icon 4 -->
-
-            <!-- Start Service Icon 5 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fa fa-flash"></i>
-                    </div>
-                    <div class="service-content">
-                        <h4><a href="#">Bootstrap 4 UI Kit</a></h4>
-                        <p>
-                            This theme uses the latest bootstrap framework 4 to have a modern, well-structured, versatile layout.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- End Service Icon 5 -->
-
-            <!-- Start Service Icon 6 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fa fa-hand-pointer-o"></i>
-                    </div>
-                    <div class="service-content">
-                        <h4><a href="#">Advanced Features</a></h4>
-                        <p>
-                            Systems like disqus, google AdSense, google analytics, Google maps are integrated.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- End Service Icon 6 -->
         </div>
 	  </div>
     <div class="mb-60"></div>
@@ -154,7 +129,7 @@ title: InterData Innovation Labs
                             <div class="overlay-text text-center">
                                 <div class="info-text">
                                     <strong>Jason</strong>
-                                    <span>IT Specialist</span>
+                                    <span>{{ site.author.description }}</span>
                                 </div>
                                 <hr class="small-divider border-white">
                                 <ul class="social-icons">
@@ -170,12 +145,14 @@ title: InterData Innovation Labs
                 <div class="col-sm-6 col-md-3">
                     <!-- Team Item Starts -->
                     <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/robin.png" alt="">
+                        <img src="{{ BASE_PATH }}/assets/img/robinbaby.png" alt="">
                         <div class="image-overlay">
                             <div class="overlay-text text-center">
                                 <div class="info-text">
                                     <strong>Robin</strong>
-                                    <span>Flight Specialist</span>
+                                    <span>
+                                        A SIA pilot which currently fly A350 for a living. A self taught programmer, Robin's journey picking up Python and application development skills put him in a position to observe how programming is being taught in various courses.
+                                    </span>
                                 </div>
                                 <hr class="small-divider border-white">
                                 <ul class="social-icons">
