Add LinkedIn and facebook

--- a/index.html
+++ b/index.html
@@ -132,14 +132,13 @@ title: I2Labs
                                     <span>{{ site.author.description }}</span>
                                 </div>
                                 <hr class="small-divider border-white">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                </ul>
                             </div>
                         </div>
                     </figure>
+                    <ul class="social-icons">
+                        <li><a href="https://www.linkedin.com/in/j-k-b5298520/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.facebook.com/kokatoo"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    </ul>
                     <!-- Team Item Ends -->
                 </div>
                 <div class="col-sm-6 col-md-3">
@@ -163,6 +162,9 @@ title: I2Labs
                             </div>
                         </div>
                     </figure>
+                    <ul class="social-icons">
+                        <li><a href="https://www.facebook.com/robin.kok"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    </ul>
                     <!-- Team Item Ends -->
                 </div>
             </div>
