Make the image heights aligned

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ title: I2Labs
                 <div class="col-sm-6 col-md-3">
                     <!-- Team Item Starts -->
                     <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/jason.png" alt="">
+                        <img src="{{ BASE_PATH }}/assets/img/jason.png" alt="" height="250">
                         <div class="image-overlay">
                             <div class="overlay-text text-center">
                                 <div class="info-text">
@@ -144,7 +144,7 @@ title: I2Labs
                 <div class="col-sm-6 col-md-3">
                     <!-- Team Item Starts -->
                     <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/robinbaby.png" alt="">
+                        <img src="{{ BASE_PATH }}/assets/img/robinbaby.png" alt="" height="250">
                         <div class="image-overlay">
                             <div class="overlay-text text-center">
                                 <div class="info-text">
