Change logo case

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: index
-title: I2Labs
+title: i2Labs
 ---
 
 <div id="content">
@@ -41,7 +41,7 @@ title: I2Labs
 
         <div class="service-content">
         <p>
-            A brand new collaboration between two individuals with a shared passion for programming and machine learning, InterData Innovation Labs (I2Labs) starts out with a mission to make programming for young students accessible and relevant.
+            A brand new collaboration between two individuals with a shared passion for programming and machine learning, InterData Innovation Labs (i2Labs) starts out with a mission to make programming for young students accessible and relevant.
         </p>
         <p>
             We believe that the fundamental skills required for programming starts from young. By making subjects learnt in school relevant to programming, concepts become self-reinforcing and less intimidating. We aim to break down notions that programming is a niche and difficult subject to learn. With extensive real-world experience in programming, we become not just instructors but also mentors for higher education and career advice.
