--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: i2Labs
                                     <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span></h3>
                                     <h5 class="slide-text animated fadeIn">
                                         <img src="{{ BASE_PATH }}/assets/img/penguin.png" alt="">
-                                        i2Labs <i class="fa fa-heart cyan-color"></i> Education for the Masses
+                                        i2LABs <i class="fa fa-heart cyan-color"></i> Education for the Masses
                                         <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
                                     </h5>
                                     <a href="blog.html" class="btn btn-lg btn-default-filled animated fadeInUp">Blog</a>
