Move homepage to blog

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: blog
-title: Blog
+title: Blogs
 group: navigation
 tags: [blog, posts, post]
 author: Jason
@@ -10,7 +10,6 @@ keywords:
 canonical:
 ---
 {% include JB/setup %}
-
 
 {% for post in site.posts %}
 <div class="blog-block post-content-area">
