--- a/index.html
+++ b/index.html
@@ -1,174 +1,26 @@
 ---
-layout: index
-title: i2Labs
+layout: blog
+title: Blogs
+group:
+tags: [blog, posts, post]
+author: Jason
+css:
+js:
+keywords:
+canonical:
 ---
+{% include JB/setup %}
 
-<div id="content">
-    <!-- sliders -->
-    <div id="sliders">
-        <div class="full-width">
-            <!-- light slider -->
-            <div id="light-slider" class="carousel slide">
-                <div id="carousel-area">
-                    <div id="carousel-slider" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <img src="{{ BASE_PATH }}/assets/images/slider/bg-1.jpg" alt="">
-                                <div class="carousel-caption">
-                                    <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span></h3>
-                                    <h5 class="slide-text animated fadeIn">
-                                        <img src="{{ BASE_PATH }}/assets/img/penguin.png" alt="">
-                                        i2Labs <i class="fa fa-heart cyan-color"></i> Education for the Masses
-                                        <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
-                                    </h5>
-                                    <a href="blog.html" class="btn btn-lg btn-default-filled animated fadeInUp">Blog</a>
-                                    <a href="#features" class="btn btn-lg btn-common animated fadeInUp">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+{% for post in site.posts %}
+<div class="blog-block post-content-area">
+	  {% if post.img %}
+    <img src="{{ BASE_PATH }}/assets/images/{{ post.img }}" alt="{{ post.title }} image">
+	  {% endif %}
+    <div class="blog-post">
+        <h3><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h3>
+	      <p>{{ post.excerpt }}</p>
+        <a class="btn btn-common" href="{{ BASE_PATH }}{{ post.url }}">Read More</a>
     </div>
-    <!-- End sliders -->
-
-    <div class="mb-60"></div>
-	  <div id="features" class="container">
-        <div class="sub-title">
-            <span>About Us</span>
-        </div>
-
-        <div class="service-content">
-        <p>
-            A brand new collaboration between two individuals with a shared passion for programming and machine learning, InterData Innovation Labs (i2Labs) starts out with a mission to make programming for young students accessible and relevant.
-        </p>
-        <p>
-            We believe that the fundamental skills required for programming starts from young. By making subjects learnt in school relevant to programming, concepts become self-reinforcing and less intimidating. We aim to break down notions that programming is a niche and difficult subject to learn. With extensive real-world experience in programming, we become not just instructors but also mentors for higher education and career advice.
-        </p>
-        <p>
-            Currently we want to reach out to schools to provide trial classes during the school holidays. These classes introduce simple programming concepts. Students learn how to code 2D games using Racket/Scheme, which is taught to first year students in many Universities and the language used in the famous SICP textbook by MIT. By recreating common games such as Snake and Tetris, classes aim to be engaging and fun especially since it is the holidays! You can find out more about our lesson plans in our <a href="blog.html">blog</a>.
-        </p>
-        </div>
-
-        <div class="mb-60"></div>
-	      <!-- SERVICES -->
-        <div class="sub-title">
-            <span>Features</span>
-        </div>
-        <div class="row">
-            <!-- Start Service Icon 1 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fa fa-tachometer"></i>
-                    </div>
-                    <div class="service-content">
-                        <h4>
-                            Future-proof learning
-                        </h4>
-                        <p>
-                            A focus on programming principles rather than language, thus building the foundation for learning future languages and being adaptable.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- End Service Icon 1 -->
-
-            <!-- Start Service Icon 2 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fa fa-cubes"></i>
-                    </div>
-                    <div class="service-content">
-                        <h4>
-                            Closely aligned with school math syllabus
-                        </h4>
-                        <p>
-                            Incorporating concepts learnt in school into programming exercises, reinforcing theoretical knowledge and exposure to real-world applications and best industry practices.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- End Service Icon 2 -->
-
-            <!-- Start Service Icon 3 -->
-            <div class="col-md-4 col-sm-6">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <i class="fa fa-cogs"></i>
-                    </div>
-                    <div class="service-content">
-                        <h4>
-                            Engaging projects that can be explored at home
-                        </h4>
-                        <p>
-                            Simple setup allows kids to continue exploring at home with minimal setup cost. Fun projects such as game design to keep students interested.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!-- End Service Icon 3 -->
-        </div>
-	  </div>
-    <div class="mb-60"></div>
-
-
-    <div class="container">
-        <div class="team-members-tow mtb-50">
-            <div class="sub-title">
-                <span>Team Members</span>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-3">
-                    <!-- Team Item Starts -->
-                    <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/jason.png" alt="" height="250">
-                        <div class="image-overlay">
-                            <div class="overlay-text text-center">
-                                <div class="info-text">
-                                    <strong>Jason</strong>
-                                    <span>{{ site.author.description }}</span>
-                                </div>
-                                <hr class="small-divider border-white">
-                            </div>
-                        </div>
-                    </figure>
-                    <ul class="social-icons">
-                        <li><a href="https://www.linkedin.com/in/j-k-b5298520/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="https://www.facebook.com/kokatoo"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    </ul>
-                    <!-- Team Item Ends -->
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <!-- Team Item Starts -->
-                    <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/robinbaby.png" alt="" height="250">
-                        <div class="image-overlay">
-                            <div class="overlay-text text-center">
-                                <div class="info-text">
-                                    <strong>Robin</strong>
-                                    <span>
-                                        A SIA pilot which currently fly A350 for a living. A self taught programmer, Robin's journey picking up Python and application development skills put him in a position to observe how programming is being taught in various courses.
-                                    </span>
-                                </div>
-                                <hr class="small-divider border-white">
-                                <ul class="social-icons">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </figure>
-                    <ul class="social-icons">
-                        <li><a href="https://www.facebook.com/robin.kok"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    </ul>
-                    <!-- Team Item Ends -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Content area end -->
 </div>
+<div class="mb-60"></div>
+{% endfor %}
