Add tag and change color

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@ group: navigation
                                 <div class="carousel-caption">
                                     <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span></h3>
                                     <h5 class="slide-text animated fadeIn">
-                                        <img src="{{ BASE_PATH }}/assets/img/penguin.png" alt="">
-                                        i2Labs <i class="fa fa-heart cyan-color"></i> Education for the Masses
+                                        <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
+                                        <span class="brand2">i2Labs <i class="fa fa-heart cyan-color"></i> Education for the Masses</span>
                                         <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
                                     </h5>
                                     <a href="blog.html" class="btn btn-lg btn-default-filled animated fadeInUp">Blog</a>
