Remove tagging gem

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ group: navigation
                             <div class="carousel-item active">
                                 <img src="{{ BASE_PATH }}/assets/images/slider/bg-1.jpg" alt="">
                                 <div class="carousel-caption">
-                                    <h3 class="slide-title animated fadeInDown"><span class="text-primary">InterData Innovation Labs</span></h3>
+                                    <h3 class="slide-title animated fadeInDown"><span class="new-text-primary">InterData Innovation Labs</span></h3>
                                     <h5 class="slide-text animated fadeIn">
                                         <img src="{{ BASE_PATH }}/assets/img/tyler.png" alt="">
                                         <span class="brand2">i2Labs <i class="fa fa-heart cyan-color"></i> Education for the Masses</span>
