--- a/classes.html
+++ b/classes.html
@@ -15,17 +15,31 @@ group: navigation
                             <b>Upcoming Classes:</b>
                         </div>
 
-                        <div class="blog-block post-content-area">
-                            <div class="sub-title">
-                                1. Introduction to Programming and Making Fun Games
-                            </div>
-
-                            <div class="service-content">
+                        <div class="course blog-block post-content-area">
+                            <div class="content">
                                 <div class="sub-title">
+                                    Intro to Programming and Making Fun Simulation and Games
+                                </div>
+
+                                <div class="service-content">
+                                    <p>
+                                        Classes will commence online on early Dec. It will be a $200 5-day 10 hours course. Participants have to be age 12 and above. Please register your interest by emailing us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
+                                    </p>
+                                </div>
+
+                                <div class="classes">
                                     Overview
                                 </div>
 
-                                Will be available online in Mid Nov.
+                                <div class="service-content">
+                                    <p>
+                                        We will learn how to develop fun games using the Racket language. Racket is a Lisp that is based on Scheme and it has a powerful set of libraries. It comes with DrRacket, a simple IDE that is easy to set up. Racket is also a popular teaching language in universities (and the famous MIT SCIP textbook is based on Scheme) as it instills an expressive functional base programming style for new coders. Beginners will not be bogged down with having to learn and memorize esoteric syntax and jump straight to learning the beauty and fundamentals of coding.
+                                    </p>
+                                    <p>
+                                        We will be using the 2htdp/universe library to develop simulation and games such as traffic lights, bouncing balls on different planets, and snake game. Please refer to our <a href="2020/10/02/day1-lesson-plan.html">past coding camp blog</a> for more examples.
+
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
