--- a/classes.html
+++ b/classes.html
@@ -23,7 +23,7 @@ group: navigation
 
                                 <div class="service-content">
                                     <p>
-                                        Classes will commence online on early Dec. It will be a $200 5-Day 10-Hour course. Participants have to be age 12 and above. Please register your interest by emailing us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
+                                        Classes will commence online in early Dec. It will be a $200 5-Day 10-Hour course. Participants have to be age 12 and above. Please register your interest by emailing us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
                                     </p>
                                 </div>
 
