--- a/classes.html
+++ b/classes.html
@@ -18,12 +18,36 @@ group: navigation
                         <div class="course blog-block post-content-area">
                             <div class="content">
                                 <div class="sub-title">
+                                    Starting from Scratch
+                                </div>
+
+                                <div class="service-content">
+                                    <p>
+                                        Classes will commence online on the first week of Dec. Suitable for kids aged 8 and up, email us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a> with your preferred dates and times in Dec. Each session is only 1-Hour long and you can opt for a 1-Day $50 introductory class or a 3-Day $150 course that involves more projects.
+                                    </p>
+                                </div>
+
+                                <div class="classes">
+                                    Overview
+                                </div>
+
+                                <div class="service-content">
+                                    <p>
+                                        Scratch is a block-based programming language specifically designed for children. In this course, kids will learn the fundamentals of programming by creating fun projects such as animation and simple games. Our instructors will facilitate and help the kids explore concepts in an intuitive and hands on way that will keep them focused and interested.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-60"></div>
+                        <div class="course blog-block post-content-area">
+                            <div class="content">
+                                <div class="sub-title">
                                     Intro to Programming and Making Fun Simulation and Games
                                 </div>
 
                                 <div class="service-content">
                                     <p>
-                                        Classes will commence online in early Dec. It will be a $200 5-Day 10-Hour course. Participants have to be age 12 and above. Please register your interest by emailing us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
+                                        Classes will commence online on the first week of Dec. It will be a $200 5-Day 10-Hour course. Suitable for youths age 12 and above. Please register your interest by emailing us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
                                     </p>
                                 </div>
 
