--- a/classes.html
+++ b/classes.html
@@ -18,6 +18,36 @@ group: navigation
                         <div class="course blog-block post-content-area">
                             <div class="content">
                                 <div class="sub-title">
+                                    Coding + Math!
+                                </div>
+
+                                <div class="service-content">
+                                    <p>
+                                        Classes will commence online on the first week of Dec. Suitable for youths aged 12 and all the way to adults! Email us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a> with your preferred dates and times in Dec. Each session is $20 and 1.5-Hour long.
+                                    </p>
+                                </div>
+
+                                <div class="classes">
+                                    Overview
+                                </div>
+
+                                <div class="service-content">
+                                    <p>
+                                        The world of programming is ever evolving, with new coding languages and technology emerging even as we speak. Typically old habits have to be changed before new ones can be learnt. Thus, the legacy methodology of teaching a language, with its cumbersome nuances and syntax, only to have it change and become obsolete, is both inefficient and counter-productive. Programming is set to become an essential and fundamental skill for the future and we believe the method of learning is important in igniting the interest of students and overcoming any fears they might have.
+                                    </p>
+                                    <p>Mathematics, logic and structured problem solving have always been the cornerstone for programming, but all too often students taking up programming at tertiary level realize too late that such skills are necessary and have to relearn them all over again. Our syllabus closely follows and incorporates the key mathematical concepts taught in school into the lesson plans and so they become self-reinforcing, improving their school work as well as equipping them with the essential skills to be a successful and able programmer. The students are not restricted by any particular language but instead adopt the ethos and thinking process required to adapt to any new language in the future.
+                                    </p>
+
+                                    <p>
+                                        We will cover a broad range of mathematical topics but will generally follow the Mathematics syllabus for the appropriate age group.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-60"></div>
+
+                        <div class="course blog-block post-content-area">
+                            <div class="content">
+                                <div class="sub-title">
                                     Starting from Scratch
                                 </div>
 
@@ -39,6 +69,7 @@ group: navigation
                             </div>
                         </div>
                         <div class="mb-60"></div>
+
                         <div class="course blog-block post-content-area">
                             <div class="content">
                                 <div class="sub-title">
