Add link to about

--- a/about.html
+++ b/about.html
@@ -95,22 +95,24 @@ group: navigation
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <!-- Team Item Starts -->
-                    <figure>
-                        <img src="{{ BASE_PATH }}/assets/img/jason.png" alt="" height="250">
-                        <div class="image-overlay">
-                            <div class="overlay-text text-center">
-                                <div class="info-text">
-                                    <strong>Jason</strong>
-                                    <span>{{ site.author.description }}</span>
+                    <a name="jason" >
+                        <figure>
+                            <img src="{{ BASE_PATH }}/assets/img/jason.png" alt="" height="250">
+                            <div class="image-overlay">
+                                <div class="overlay-text text-center">
+                                    <div class="info-text">
+                                        <strong>Jason</strong>
+                                        <span>{{ site.author.description }}</span>
+                                    </div>
+                                    <hr class="small-divider border-white">
                                 </div>
-                                <hr class="small-divider border-white">
                             </div>
-                        </div>
-                    </figure>
-                    <ul class="social-icons">
-                        <li><a href="https://www.linkedin.com/in/j-k-b5298520/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="https://www.facebook.com/kokatoo"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    </ul>
+                        </figure>
+                        <ul class="social-icons">
+                            <li><a href="https://www.linkedin.com/in/j-k-b5298520/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.facebook.com/kokatoo"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </a>
                     <!-- Team Item Ends -->
                 </div>
                 <div class="col-sm-6 col-md-3">
