--- a/classes.html
+++ b/classes.html
@@ -23,7 +23,7 @@ group: navigation
 
                                 <div class="service-content">
                                     <p>
-                                        Classes will commence online on the first week of Dec. Suitable for youths aged 12 and all the way to adults! Email us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a> with your preferred dates and times in Dec. Each session is $20 and 1.5-Hour long.
+                                        Classes will commence online on the first week of Dec. Suitable for youths aged 12 and all the way to adults! Email us at <a href = "mailto: kokatoo1948@gmail.com">kokatoo1948@gmail.com</a> with your preferred dates and times in Dec. Each session is $20 and 1.5-Hour long.
                                     </p>
                                 </div>
 
@@ -53,7 +53,7 @@ group: navigation
 
                                 <div class="service-content">
                                     <p>
-                                        Classes will commence online on the first week of Dec. Suitable for kids aged 8 and up, email us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a> with your preferred dates and times in Dec. Each session is only 1-Hour long and you can opt for a 1-Day $50 introductory class or a 3-Day $150 course that involves more projects.
+                                        Classes will commence online on the first week of Dec. Suitable for kids aged 8 and up, email us at <a href = "mailto: kokatoo1948@gmail.com">kokatoo1948@gmail.com</a> with your preferred dates and times in Dec. Each session is only 1-Hour long and you can opt for a 1-Day $50 introductory class or a 3-Day $150 course that involves more projects.
                                     </p>
                                 </div>
 
@@ -78,7 +78,7 @@ group: navigation
 
                                 <div class="service-content">
                                     <p>
-                                        Classes will commence online on the first week of Dec. It will be a $200 5-Day 10-Hour course. Suitable for youths age 12 and above. Please register your interest by emailing us at <a href = "mailto: info@i2labs.page">info@i2labs.page</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
+                                        Classes will commence online on the first week of Dec. It will be a $200 5-Day 10-Hour course. Suitable for youths age 12 and above. Please register your interest by emailing us at <a href = "mailto: kokatoo1948@gmail.com">kokatoo1948@gmail.com</a>. Please include your name, contact number, and your preferred time and day of the week. See you soon!
                                     </p>
                                 </div>
 
